# Y_labFastAPI

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  docker-compose-postman.yaml  docker-compose-tests.yaml  environ.py  pyproject.toml  requirements.txt  settings.py
app/: main.py  schemas.py
app/admin/: Menu.xlsx
app/cache/: connection.py
app/celery/: celeryconfig.py  tasks.py
app/core/: settings.py
app/db/: models.py  session.py
app/repositories/: base.py  cache.py  sqlalch.py
app/routers/: dishes.py  menus.py  submenus.py
app/schemas/: create.py  responses.py
app/services/: handlers.py  menu.py
app/utils/: db_operations.py  parse_excel.py  sync_db.py
migrations/: env.py
migrations/versions/: 19146379f33a_init_db.py  3bcb49981e12_init_db.py  6977f97d9bc2_init_db.py
test/: conftest.py  test_count.py  test_dish.py  test_menu.py  test_submenu.py
