[tool.poetry]
name = "restaurantfastapi"
version = "0.1.0"
description = ""
authors = ["onehandedpirate <plagueismkii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
fastapi = "^0.100.0"
pydantic = "^2.0.3"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
pre-commit = "^3.3.3"
redis = "^4.6.0"
fastapi-cache2 = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "app",
]
asyncio_mode = "auto"
